# adop

./: .claudeignore  .coverage  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  .trivyignore  ADOP_GENERIC_QUICKSTART.md  ADOP_SHELF_CLASSIFICATION.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVATE_HOST_BOOTSTRAP_RUNBOOK.md  PUBLICATION_RUNBOOK.md  PUBLIC_POLICY_PROMOTION_MATRIX.md  PUBLIC_VERIFICATION_CONTRACT.md  README.md  REPO_EXPORT_CHECKLIST.md  REPO_EXPORT_GUIDE.md  SECURITY.md  SUPPORT.md  adop-overlay.md  adop.json  eslint.config.js  package.json  pyproject.toml  pytest.ini
.adop/: adop_candidate-intake-note_ci-001.json  adop_candidate-intake-note_ci-002.json  adop_candidate-intake-note_ci-003.json  adop_candidate-intake-note_ci-004.json  adop_candidate-intake-note_ci-005.json  adop_candidate-intake-note_ci-006.json  adop_candidate-intake-note_ci-007.json  adop_candidate-intake-note_ci-008.json  adop_candidate-intake-note_ci-009.json  adop_candidate-intake-note_ci-010.json  adop_candidate-intake-note_ci-011.json  adop_candidate-intake-note_ci-012.json  adop_candidate-intake-note_ci-013.json  adop_candidate-intake-note_ci-014.json  adop_candidate-intake-note_ci-015.json  adop_candidate-intake-note_ci-016.json  adop_comparison-note_cmp-001.json  adop_comparison-note_cmp-002.json  adop_comparison-note_cmp-003.json  adop_comparison-note_cmp-004.json  adop_comparison-note_cmp-005.json  adop_comparison-note_cmp-006.json  adop_comparison-note_cmp-007.json  adop_comparison-note_cmp-008.json  adop_comparison-note_cmp-009.json  adop_comparison-note_cmp-010.json  adop_comparison-note_cmp-011.json  adop_comparison-note_cmp-012.json  adop_comparison-note_cmp-013.json  adop_comparison-note_cmp-014.json  adop_comparison-note_cmp-015.json  adop_comparison-note_cmp-016.json  adop_coupling-note_cp-001.json  adop_coupling-note_cp-002.json  adop_coupling-note_cp-003.json  adop_coupling-note_cp-004.json  adop_coupling-note_cp-005.json  adop_coupling-note_cp-006.json  adop_coupling-note_cp-007.json  adop_coupling-note_cp-008.json  (+117 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  tool-surface-examples.yml
archive/: README.md
archive/design/: adop-aci-manual-review-design.md  adop-error-hardening-design.md  adop-genericization-design.md  adop-owner-decision-closure-design.md  adop-pre-public-polish-design.md  adop-pre-public-readiness-design.md  adop-private-host-bootstrap-design.md  adop-publication-execution-design.md
archive/roadmap/: adop-aci-manual-review-checkpoints.md  adop-aci-manual-review-goal.md  adop-aci-manual-review-path.md  adop-error-hardening-checkpoints.md  adop-error-hardening-goal.md  adop-error-hardening-path.md  adop-genericization-checkpoints.md  adop-genericization-goal.md  adop-genericization-path.md  adop-owner-decision-closure-checkpoints.md  adop-owner-decision-closure-goal.md  adop-owner-decision-closure-path.md  adop-pre-public-polish-checkpoints.md  adop-pre-public-polish-goal.md  adop-pre-public-polish-path.md  adop-pre-public-readiness-checkpoints.md  adop-pre-public-readiness-goal.md  adop-pre-public-readiness-path.md  adop-private-host-bootstrap-checkpoints.md  adop-private-host-bootstrap-goal.md  adop-private-host-bootstrap-path.md  adop-publication-execution-checkpoints.md  adop-publication-execution-goal.md  adop-publication-execution-path.md
archive/tasks/: adop-aci-manual-review-task-board.md  adop-error-hardening-task-board.md  adop-genericization-task-board.md  adop-owner-decision-closure-task-board.md  adop-pre-public-polish-task-board.md  adop-pre-public-readiness-task-board.md  adop-private-host-bootstrap-task-board.md  adop-publication-execution-task-board.md
checklists/: external-tool-adoption-checklist.md
common/: README.md
docs/: ADOP_GENERIC_QUICKSTART.md  AI_AGENT_RUNTIME_TOKEN_OPTIMIZATION.md
examples/: README.md
python/: adop_artifacts.py  adop_cli.py  adop_summary.py  adop_types.py  adop_validation.py  common.py
scripts/: repo-smoke.sh
templates/: external-tool-adoption-note-template.md
tests/: conftest.py  test_aggregate.py  test_artifact_root_errors.py  test_coupling.py  test_html_render.py  test_lifecycle_cli.py  test_runtime_manifest.py  test_state_machine.py  test_summary.py  test_sync.py  test_types_invariants.py  test_usability_commands.py  test_validation.py
tool-surfaces/: Dockerfile.tooling-example  package.json  renovate.json
workspace/: README.md
(+75 files in other folders)
