[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adop"
version = "0.1.1"
requires-python = ">=3.11,<3.14"
description = "CLI for tracking external tool adoption decisions"
readme = "README.md"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "check-jsonschema>=0.37,<1",
    "mypy>=1.16,<2",
    "pre-commit>=4,<5",
    "pytest-xdist>=3.8,<4",
    "ruff>=0.15.17,<1",
]

[project.urls]
Homepage = "https://github.com/maruwork/adop"
Repository = "https://github.com/maruwork/adop"

[project.scripts]
adop = "adop_cli:main"
adop-sync = "adop_sync:main"

[tool.setuptools]
py-modules = [
    "adop_cli",
    "adop_artifacts",
    "adop_html",
    "adop_ids",
    "adop_state_machine",
    "adop_summary",
    "adop_sync",
    "adop_types",
    "adop_validation",
    "common",
]

[tool.setuptools.package-dir]
"" = "shared/python"

[tool.setuptools.data-files]
"share/adop/templates" = [
    "shared/templates/adop-governance-dashboard-template.html",
    "shared/templates/project-local-adop-overlay-template.md",
    "shared/templates/external-tool-adoption-note-template.md",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
files = ["shared/python", "tests"]
ignore_missing_imports = true
warn_unused_configs = true
pretty = true
